# prompt-hacker

./: .gitignore  README.md  TODO.md  data.json  extract_train_examples.csv  jailbreak_examples.csv  pyproject.toml
data/inject/: inject_attacks.json
data/jailbreak/: gpt4_malicious_prompts.csv  gpt4_malicious_prompts.json  jailbreak_attacks.csv  jailbreak_attacks.json
data/leak/: leak_attacks.json
examples/: prompt_injection_examples.csv  try_extract_train.py  try_jailbreak.py  try_pipelines.py  try_prompt_injection.py  try_prompt_leaking.py
examples/data/: extract_train_examples.csv  jailbreak_examples.csv  prompt_leaking_examples.csv
notebooks/: try_inject.ipynb  try_jailbreak.ipynb  try_leak.ipynb
prompt_hacker/: api_client.py  attack.py  augment_prompts.py  constant.py  convert.py  generator.py  interface.py  llm.py  model.py  pipe.py  prompts.py  schemas.py  utils.py
prompt_hacker/attack/: extract_train.py  inject.py  jailbreak.py  leak.py
prompt_hacker/evaluate/: extract_train.py  inject.py  jailbreak.py  leak.py
prompt_hacker/loader/: inject.py  jailbreak.py  leak.py
prompt_hacker/test/: api_client.py
tests/: test.csv  test.ipynb  test.py
